<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/tab_home" />
    <item
        android:id="@+id/navigation_products"
        android:icon="@drawable/ic_products"
        android:title="@string/tab_products" />
    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/tab_cart" />
    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_orders"
        android:title="@string/tab_orders" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account"
        android:title="@string/tab_account" />
</menu>
